# xhs-mcp-py

./: CHANGELOG.md  README.md  pyproject.toml
.claude/skills/xhs-mcp-py/: SKILL.md
.github/workflows/: publish.yml
src/xhs_kit/: __init__.py
src/xhs_mcp/: __init__.py  browser.py  cli.py  client.py  feed_detail.py  interact.py  login.py  mcp_server.py  text_card.py
tests/: test_cli.py  test_feed_detail.py  test_headless_guard.py  test_login.py  test_mcp_server.py
